--- a/NumPy/NumPy Assignemnt Solution.ipynb
+++ b/NumPy/NumPy Assignemnt Solution.ipynb
@@ -1844,8 +1844,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "10959ef2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "526dcf0d",
    "metadata": {},
    "outputs": [],
    "source": []
