Removed embedded repository Case-Study-Data-Cleaning

--- a/Pandas/Assignment No. 1/EDA_Project1_Kabir.ipynb
+++ b/Pandas/Assignment No. 1/EDA_Project1_Kabir.ipynb
@@ -593,6 +593,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "deb80697-f271-4936-aa9c-49b4b167c001",
+   "metadata": {},
+   "source": [
+    "# Finding Averages of Each Type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 122,
    "id": "7668969d",
